--- a/blog/blog.csproj
+++ b/blog/blog.csproj
@@ -191,6 +191,10 @@
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\BlogContext.cs" />
     <Compile Include="Models\Entities\Entry.cs" />
+    <Compile Include="Models\Entities\IEntity.cs" />
+    <Compile Include="Models\IUnitOfWork.cs" />
+    <Compile Include="Models\Repositories\GenericBlogRepository.cs" />
+    <Compile Include="Models\Repositories\IGenericRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -304,11 +308,15 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\BlogEntry\index.cshtml" />
+    <Content Include="Views\BlogEntry\Edit.cshtml" />
+    <Content Include="Views\BlogEntry\Details.cshtml" />
+    <Content Include="Views\BlogEntry\Delete.cshtml" />
+    <Content Include="Views\BlogEntry\Create.cshtml" />
+    <Content Include="Views\BlogEntry\Index.cshtml" />
+    <Content Include="Views\BlogEntry\_CreateOrEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\Repositories\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
